🩹 Fix: code block overflow [#54]

--- a/assets/stylesheets/article-body.scss
+++ b/assets/stylesheets/article-body.scss
@@ -78,6 +78,9 @@
 		border-radius: 2px;
 		border: 2px solid #2b2b2b;
 		color: #d8e6db;
+		overflow-x: scroll;
+		word-break: break-all;
+		line-height: 1.28;
 	}
 
 	table {
